2004-10-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr.cpp (sp_repr_change_order):
	  Add g_return_if_fail for some conditions that would break structural
	  integrity, and add a TODO comment indicating incompleteness.
	  Use sp_repr_prev function.

	* src/xml/repr-get-children.h, src/xml/repr-get-children.cpp
	  (sp_repr_prev_sibling): Rename to sp_repr_prev for consistency
	  with sp_repr_next.  Don't consider it an error for child to be
	  NULL or parentless.  Callers updated.

	* src/draw-context.cpp (spdc_concat_colors_and_flush,
	  spdc_flush_white): Misc readability cleanups.

	* src/display/curve.cpp (sp_curve_reverse): Fix a bug where the
	  reversed curve wrongly included a trailing moveto command.  (Bug
	  introduced in my 2004-09-05 change: one of the callers I didn't
	  know how to cause to run.)

2004-10-12  Ted Gould  <ted@gould.cx>

	* share/extensions/ai_input.inkmod, share/extensions/ai_output.inkmod,
	share/extensions/dia.inkmod, share/extensions/dropshadow.inkmod,
	share/extensions/eps_input.inkmod, share/extensions/epsi_output.inkmod,
	share/extensions/gimpgrad.inkmod, share/extensions/ps_input.inkmod,
	share/extensions/roundhole.inkmod, share/extensions/sk_input.inkmod,
	share/extensions/svgz_input.inkmod, share/extensions/svgz_output.inkmod,
	share/extensions/txt2svg.inkmod, share/extensions/wmf_input.inkmod,
	src/extension/dependency.cpp, src/extension/dependency.h,
	src/extension/extension.cpp, src/extension/init.cpp:

	Moving all of the dependency stuff from the scripts, up to the root
	extension level.  This means that everyone can have dependencies, and
	dependency checking (a good thing).  This makes use of the new
	'Dependency' class that is also in the extension directory.

2004-10-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/pencil-context.cpp (sp_pencil_context_root_handler): Split into
	  many functions, fixing some illegal union aliasing along the way (as