@@ -719,8 +719,8 @@ fit_and_split_calligraphics(SPDynaDrawContext *dc, gboolean release)
 
     if ( dc->npoints == SAMPLING_SIZE - 1 || release ) {
 #define BEZIER_SIZE       4
-#define BEZIER_MAX_DEPTH  4
-#define BEZIER_MAX_LENGTH ( BEZIER_SIZE << ( BEZIER_MAX_DEPTH - 1 ) )
+#define BEZIER_LG_MAX_BEZIERS  3
+#define BEZIER_MAX_LENGTH ( BEZIER_SIZE << BEZIER_LG_MAX_BEZIERS )
 
 #ifdef DYNA_DRAW_VERBOSE
         g_print("[F&S:#] dc->npoints:%d, release:%s\n",
@@ -740,12 +740,12 @@ fit_and_split_calligraphics(SPDynaDrawContext *dc, gboolean release)
 
         NR::Point b1[BEZIER_MAX_LENGTH];
         gint const nb1 = sp_bezier_fit_cubic_r(b1, dc->point1, dc->npoints,
-                                               tolerance_sq, BEZIER_MAX_DEPTH);
+                                               tolerance_sq, BEZIER_LG_MAX_BEZIERS);
         g_assert( nb1 * BEZIER_SIZE <= gint(G_N_ELEMENTS(b1)) );
 
         NR::Point b2[BEZIER_MAX_LENGTH];
         gint const nb2 = sp_bezier_fit_cubic_r(b2, dc->point2, dc->npoints,
-                                               tolerance_sq, BEZIER_MAX_DEPTH);
+                                               tolerance_sq, BEZIER_LG_MAX_BEZIERS);
         g_assert( nb2 * BEZIER_SIZE <= gint(G_N_ELEMENTS(b2)) );
 
         if ( nb1 != -1 && nb2 != -1 ) {
